<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.CardViewActivity">

    <com.lehlagoo.legods.view.CardView
        android:id="@+id/card_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_text_card_1"
        android:contextClickable="true"
        android:padding="@dimen/dimen_biggest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:number_comments="@string/default_comments_1"
        app:number_likes="@string/default_likes_1"
        app:text_card="@string/default_text_card_1"
        tools:ignore="MissingConstraints" />

    <com.lehlagoo.legods.view.CardView
        android:id="@+id/card_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/default_text_card_2"
        android:contextClickable="true"
        android:padding="@dimen/dimen_biggest"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_1"
        app:number_comments="@string/default_comments_1"
        app:number_likes="@string/default_likes_1"
        app:text_card="@string/default_text_card_2" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="360dp"
        android:importantForAccessibility="no"
        android:padding="@dimen/dimen_biggest"
        android:src="@drawable/peep_standing_15"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_2"

        />

</androidx.constraintlayout.widget.ConstraintLayout>